[gd_scene load_steps=43 format=3 uid="uid://wr337ovjn5s1"]

[ext_resource type="Script" uid="uid://cudhwakfcx04s" path="res://Scripts/player.gd" id="1_kyqiw"]
[ext_resource type="Texture2D" uid="uid://dv6sa4ar112ae" path="res://Sprites/Squid_spritesheet.png" id="1_rpqav"]
[ext_resource type="Texture2D" uid="uid://c7sihah5uch0s" path="res://Sprites/Particle/smoke-6frame.png.png" id="3_gntrk"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_dewec"]
particles_animation = true
particles_anim_h_frames = 6
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Curve" id="Curve_gntrk"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_dewec"]
curve = SubResource("Curve_gntrk")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_5ixxa"]
particle_flag_disable_z = true
emission_shape_scale = Vector3(10, 10, 1)
emission_shape = 1
emission_sphere_radius = 1.0
spread = 30.0
gravity = Vector3(0, 0, 0)
scale_min = 0.5
scale_max = 0.79999995
color = Color(0.4862745, 0.8901961, 0.87058824, 1)
alpha_curve = SubResource("CurveTexture_dewec")
anim_speed_min = 1.0
anim_speed_max = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iir0v"]
size = Vector2(30, 50)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y7xjg"]
size = Vector2(54.81, 19.92)

[sub_resource type="AtlasTexture" id="AtlasTexture_iir0v"]
atlas = ExtResource("1_rpqav")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s11ja"]
atlas = ExtResource("1_rpqav")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5cjv6"]
atlas = ExtResource("1_rpqav")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oixmu"]
atlas = ExtResource("1_rpqav")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rt7bu"]
atlas = ExtResource("1_rpqav")
region = Rect2(320, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kx5ig"]
atlas = ExtResource("1_rpqav")
region = Rect2(384, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a11ls"]
atlas = ExtResource("1_rpqav")
region = Rect2(448, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wm6mb"]
atlas = ExtResource("1_rpqav")
region = Rect2(320, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lxa1y"]
atlas = ExtResource("1_rpqav")
region = Rect2(384, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d18xj"]
atlas = ExtResource("1_rpqav")
region = Rect2(448, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_03i2x"]
atlas = ExtResource("1_rpqav")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0yhiy"]
atlas = ExtResource("1_rpqav")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_52qel"]
atlas = ExtResource("1_rpqav")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i46sk"]
atlas = ExtResource("1_rpqav")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a0gcm"]
atlas = ExtResource("1_rpqav")
region = Rect2(256, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gu4ls"]
atlas = ExtResource("1_rpqav")
region = Rect2(320, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sar1a"]
atlas = ExtResource("1_rpqav")
region = Rect2(384, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7y451"]
atlas = ExtResource("1_rpqav")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lpj5i"]
atlas = ExtResource("1_rpqav")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_36nky"]
atlas = ExtResource("1_rpqav")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebu6q"]
atlas = ExtResource("1_rpqav")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dtmyt"]
atlas = ExtResource("1_rpqav")
region = Rect2(0, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h835l"]
atlas = ExtResource("1_rpqav")
region = Rect2(64, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ciy7v"]
atlas = ExtResource("1_rpqav")
region = Rect2(128, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ias5i"]
atlas = ExtResource("1_rpqav")
region = Rect2(192, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gcu88"]
atlas = ExtResource("1_rpqav")
region = Rect2(256, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jhis3"]
atlas = ExtResource("1_rpqav")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cj83l"]
atlas = ExtResource("1_rpqav")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tvncw"]
atlas = ExtResource("1_rpqav")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u6ib3"]
atlas = ExtResource("1_rpqav")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_62aey"]
atlas = ExtResource("1_rpqav")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oj5g6"]
atlas = ExtResource("1_rpqav")
region = Rect2(320, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_tijm5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iir0v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s11ja")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5cjv6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oixmu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rt7bu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kx5ig")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a11ls")
}],
"loop": true,
"name": &"dash",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wm6mb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lxa1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d18xj")
}],
"loop": true,
"name": &"fall",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_03i2x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0yhiy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_52qel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i46sk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a0gcm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gu4ls")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sar1a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i46sk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_52qel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0yhiy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_03i2x")
}],
"loop": true,
"name": &"hurt",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7y451")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lpj5i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_36nky")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebu6q")
}],
"loop": true,
"name": &"idle",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dtmyt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h835l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ciy7v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ias5i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gcu88")
}],
"loop": true,
"name": &"jump",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gcu88")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dtmyt")
}],
"loop": true,
"name": &"jump_end",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jhis3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cj83l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tvncw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u6ib3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_62aey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oj5g6")
}],
"loop": true,
"name": &"walk",
"speed": 8.0
}]

[node name="Player" type="CharacterBody2D" groups=["Player"]]
script = ExtResource("1_kyqiw")

[node name="WalkParticles2D" type="GPUParticles2D" parent="."]
unique_name_in_owner = true
material = SubResource("CanvasItemMaterial_dewec")
emitting = false
texture = ExtResource("3_gntrk")
lifetime = 0.6
process_material = SubResource("ParticleProcessMaterial_5ixxa")

[node name="StandCollision" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
position = Vector2(-1, -2)
shape = SubResource("RectangleShape2D_iir0v")

[node name="DashCollision" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
position = Vector2(0.595, 1.96)
shape = SubResource("RectangleShape2D_y7xjg")
disabled = true
debug_color = Color(0.941543, 0.5617119, 0.58319825, 0.41960785)

[node name="PlayerSprite2D" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
sprite_frames = SubResource("SpriteFrames_tijm5")
animation = &"dash"
frame = 2
frame_progress = 0.7133972

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)
process_callback = 0
position_smoothing_enabled = true

[node name="FallTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.1
one_shot = true
